Add and update landingpages

--- a/public/themen/asylfragen.html
+++ b/public/themen/asylfragen.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html dir="rtl" class="no-js" lang="de">
+<html class="no-js" lang="de">
 <head>
     <link rel="dns-prefetch" href="//ajax.googleapis.com">
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>أسئلة حول اللجوء - Einfach Hilfe finden mit clarat.org</title>
+    <title>Asylfragen - Einfach Hilfe finden mit clarat.org</title>
     <meta name="description" content="Die Regeln für die Familienzusammenführung für Flüchtlinge sind nicht einfach zu verstehen. Es gibt viele Ausnahmen. Hier findest du Hilfe!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="width=device-width, initial-scale=1.0, user-scalable=1" name="viewport" />
@@ -55,18 +55,12 @@
         </svg>
     </div>
 </header>
-<div class="hero" style="background-image: url(assets/images/Asyl-ar.jpg)">
+<div class="hero" style="background-image: url(assets/images/Asyl.jpg)">
     <div class="hero__container">
         <div class="hero__content layout-inner">
-            <h1 class="hero__headline">أسئلة حول اللجوء</h1>
+            <h1 class="hero__headline">Asylfragen</h1>
 
-            <div class="hero__intro">
-            للأسف أنه توجد حالياً حروب في بعض البلدان. وهناك دول أخرى تضطهد
-            <br>
-            بعض أفرادها لأنهم مختلفين أو يفكرون بشكل مختلف. لهذه الأسباب اضطر
-            <br>
-            الكثيرون إلى الفرار من بلادهم. في ألمانيا يمكن الحصول على اللجوء.
-            </div>
+            <div class="hero__intro">Leider herrscht in einigen Ländern Krieg. In anderen verfolgt die Regierung Menschen, die anders sind oder anders denken. Deshalb müssen viele aus ihrer Heimat fliehen. In Deutschland können Flüchtlinge Asyl bekommen. </div>
         </div>
     </div>
 </div>
@@ -75,23 +69,22 @@
 
         <div class="content__left">
 
-            <p class="content__mobile-intro"><b>للأسف أنه توجد حالياً حروب في بعض البلدان. وهناك دول أخرى تضطهد بعض أفرادها لأنهم مختلفين أو يفكرون بشكل مختلف. لهذه الأسباب اضطر الكثيرون إلى الفرار من بلادهم. في ألمانيا يمكن الحصول على اللجوء.</b></p>
+            <p class="content__mobile-intro"><b>Leider herrscht in einigen Ländern Krieg. In anderen verfolgt die Regierung Menschen, die anders sind oder anders denken. Deshalb müssen viele aus ihrer Heimat fliehen. In Deutschland können Flüchtlinge Asyl bekommen. </b></p>
 
-            <h2>كيف يمكن التقدم بطلب للجوء؟</h2>
+            <h2>Wie kann man Asyl beantragen?</h2>
 
-            <p>في أول الأمر يجب على اللاجئ أن يسجل نفسه لدى السلطات الألمانية مثل الشرطة أو مكتب شئون الأجانب. وهناك يجب عليه طلب اللجوء. بعدها يتم تسكينه في مركز إستقبال أولي وفيه يجب أن يعطي بياناته الشخصية. وهذا ما يسمى بالتسجيل. وبعد التسجيل تبدأ قضية اللجوء. موظفو المكتب الإتحادي للهجرة واللجوء أي BAMF يقررون إذا ما كان اللاجئ يمكنه أن يحصل على حق اللجوء أم لا.</p>
-
-            <a class="btn" id="lp-button" style="max-width:60%; margin-left: 20%" href="https://www.clarat.org/ar/refugees/%D8%B9%D8%B1%D9%88%D8%B6?utf8=%E2%9C%93&search_form%5Bquery%5D=%D8%A7%D9%84%D8%B3%D9%83%D9%86%20%D9%81%D9%8A%20%D8%A3%D9%84%D9%85%D8%A7%D9%86%D9%8A%D8%A7&search_form%5Bsearch_location%5D=Alexanderplatz%2C%20Berlin%2C%20Deutschland&search_form%5Bgenerated_geolocation%5D=52.5219184%2C13.4132147&search_form%5Bcategory%5D&search_form%5Bexact_location%5D=false&search_form%5Bcontact_type%5D=remote&search_form%5Bencounters%5D=hotline%2Cemail%2Cchat%2Cforum%2Conline-course%2Cportal&search_form%5Bage%5D&search_form%5Btarget_audience%5D&search_form%5Bexclusive_gender%5D&search_form%5Blanguage%5D&search_form%5Bsort_order%5D=nearby&search_form%5Bsection_identifier%5D=family&search_form%5Bpage%5D=0">جِد المساعدة الآن ›</a>
+            <p>Zuerst muss sich ein Flüchtling bei einer deutschen Behörde melden. Das kann zum Beispiel die Polizei oder das Ausländeramt sein. Er muss dort um Asyl bitten. Dann kommt er in eine Erstaufnahmeeinrichtung. Dort gibt er seine persönlichen Daten an. Das nennt man Registrierung. Nach der Registrierung beginnt das Asylverfahren. Im Asylverfahren entscheiden Beamte vom BAMF, ob ein Geflüchteter Asyl bekommt oder nicht.</p>
+            <a class="btn" id="lp-button" style="max-width:60%; margin-left: 20%" href="https://www.clarat.org/refugees/angebote?utf8=%E2%9C%93&search_form%5Bquery%5D&search_form%5Bsearch_location%5D=Alexanderplatz%2C%20Berlin%2C%20Deutschland&search_form%5Bgenerated_geolocation%5D=52.520007%2C13.404954&search_form%5Bcategory%5D=Asyl%20und%20Recht&search_form%5Bexact_location%5D=false&search_form%5Bcontact_type%5D=remote&search_form%5Bencounters%5D=hotline%2Cemail%2Cchat%2Cforum%2Conline-course%2Cportal&search_form%5Bage%5D&search_form%5Btarget_audience%5D&search_form%5Bexclusive_gender%5D&search_form%5Blanguage%5D&search_form%5Bsort_order%5D=nearby&search_form%5Bsection_identifier%5D=family&search_form%5Bpage%5D=0">Jetzt Hilfe finden ›</a>
 
         </div>
         <div class="content__right">
 
-            <h2>ما الذي يحدث في قضية اللجوء؟</h2>
+            <h2>Was passiert im Asylverfahren? </h2>
 
-            <p>بعد التسجيل يحصل اللاجئ على موعد لدى BAMF. في الموعد المحدد يقوم اللاجئ بتقديم طلب اللجوء. الموعد يحضره أيضاً مترجم. فيقوم الموظف بطرح أسئلة حول الحياة في الوطن وحول رحلة الفرار. بعد ذلك يحصل اللاجئ على وضع إقامة Aufenthaltsgestattung. وبهذه الهوية يمكنه أن يعيش في ألمانيا لفترة ما ويحصل على المساعدات من الدولة. هذه المساعدات تسمى إعانة طالبي اللجوء أو Asylbewerberleistungen. مكتب الـ BAMF يفحص أولاً إذا ما كانت ألمانيا تختص بأمر هذا اللاجئ أم لا. في حالة إذا كانت ألمانيا تختص به فإنه يتلقى دعوة لجلسة الإستماع.</p>
-            <p>جلسة الإستماع تعتبر أهم جزء في إجراءات اللجوء. فيقوم فيها الموظف بطرح أسئلة على اللاجئ تتعلق بحياته في بلده. ولماذا وكيف قام بالهروب من بلده. ويتم كتابة كل شئ بالجلسة. بعد الجلسة ببضعة أشهر يحصل اللاجئ على خطاب من BAMF. هذا الخطاب يسمى القرار. وهذا القرار يتضمن ما إذا كان الشخص يحصل على حق اللجوء أم لا.</p>
-            <p>من لم يحصل بعد على حق اللجوء يعيش تحت قيود. فطالبو اللجوء لابد أن يعيشوا في مكان سكن محدد. ومسموح لهم العمل فقط بعد مدة من البقاء في ألمانيا. وفي الأشهر الـ ١٥ الأولى فإن الرعاية الصحية أيضاً محدودة. </p>
-            <p>وبالرغم من ذلك فإن كل طالب لجوء يحصل على معونة طالبي اللجوء. فيحصل على طعام وملابس وأحذية وأدوات نظافة وأدوات منزلية. بالإضافة إلى مصروف جيب حتى يمكن للاجئ أن يشتري بعض الأشياء مثل كارت شحن للتليفون أو تذكرة مواصلات. </p>
+            <p>Nach der Registrierung bekommt ein Flüchtling einen Termin vom BAMF. Dort kann er seinen Asylantrag stellen. Bei diesem Termin ist ein Dolmetscher dabei. Ein Beamter stellt Fragen zum Leben in der Heimat und zur Flucht. Dann bekommt der Flüchtling eine Aufenthaltsgestattung. Damit darf er erstmal in Deutschland bleiben und Hilfen vom Staat bekommen. Diese Hilfen heißen Asylbewerberleistungen. Das BAMF prüft jetzt, ob Deutschland für ihn zuständig ist. Wenn ja, bekommt er eine Einladung zur Anhörung.</p>
+            <p>Die Anhörung ist der wichtigste Teil des Asylverfahrens. Ein Mitarbeiter fragt nach dem Leben des Geflüchteten in der Heimat. Und wie und warum er geflohen ist. Er schreibt alles auf. Ein paar Monate nach der Anhörung bekommt der Geflüchtete einen Brief vom BAMF. Dieser Brief heißt Bescheid. Darin steht, ob er Asyl bekommt oder nicht.</p>
+            <p>Wer noch keinen Asylbescheid hat, muss mit bestimmten Einschränkungen leben. Asylbewerber müssen an einem festgelegten Wohnort wohnen. Sie dürfen erst nach einer Weile arbeiten. In den ersten 15 Monaten ist auch die Versorgung für Kranke noch eingeschränkt.</p>
+            <p>Trotzdem ist jeder Geflüchtete über die Asylbewerberleistungen versorgt. Es gibt Essen und Trinken, Kleidung und Schuhe, Hygieneartikel und Hausrat. Außerdem ein Taschengeld. Damit können Geflüchtete zum Beispiel eine SIM-Karte oder ein Busticket kaufen.</p>
         </div>
     </div>
     <!--<div class="cta-container">-->
@@ -103,9 +96,9 @@
 
     <div class="footer-main layout-inner">
             <ul class="footer-main__list ">
-                <li style="margin-left: 1em"><a href="https://www.clarat.org/refugees/impressum" target="_blank">هيئة التحرير</a></li>
-                <li><a href="https://www.clarat.org/refugees/datenschutzhinweise" target="_blank">حماية البيانات</a></li>
-                <li><a href="http://blog.clarat.org/" target="_blank">مدونة</a></li>
+                <li><a href="https://www.clarat.org/refugees/impressum" target="_blank">Impressum</a></li>
+                <li><a href="https://www.clarat.org/refugees/datenschutzhinweise" target="_blank">Datenschutz</a></li>
+                <li><a href="http://blog.clarat.org/" target="_blank">Blog</a></li>
                 <li><a href="http://www.clarat.org/" target="_blank">www.clarat.org</a></li>
             </ul>
         </div>
