--- a/public/themen/integrationskurs-ar.html
+++ b/public/themen/integrationskurs-ar.html
@@ -55,7 +55,7 @@
         </svg>
     </div>
 </header>
-<div class="hero" style="background-image: url(assets/images/Flüchtlingshilfe-ar.jpg)">
+<div class="hero" style="background-image: url(assets/images/Integrationskurs.jpg)">
     <div class="hero__container">
         <div class="hero__content layout-inner">
             <h1 class="hero__headline">دورة الإندماج</h1>
@@ -72,7 +72,7 @@
 
             <p class="content__mobile-intro"><b>حضور دورة الإندماج يعتبر إلزامي بالنسبة للكثير من اللاجئين. حيث إن الدورة تساعدهم على التأقلم في ألمانيا. فما الذي يتعلمه اللاجئ إذن في دورة الإندماج؟ وكيف وأين يمكن حضور دورة الإندماج؟</b></p>
 
-            <h2>Was ist دورة الإندماج</h2>
+            <h2>ما هي دورة الإندماج؟</h2>
 
             <p>دورة الإندماج هي عبارة عن دورة لغة ألمانية ودورة توجيه. فاللاجئون يتعلمون فيها الكثير عن اللغة الألمانية وعن الحياة في ألمانيا. دورة اللغة تستغرق في الإجمالي ٦٠٠ساعة بعدها يدخل الشخص إختبار مستوى B1. موضوعات دورة اللغة تدور حول العمل والحياة اليومية والتسوق أو حول التعامل مع الجهات الحكومية أو كتابة الخطابات الرسمية. أما في دورة التوجيه فيتعلم اللاجئ الكثير عن التاريخ الألماني والثقافة والمجتمع والسياسة. دورة التوجيه تستغرق ٦٠ ساعة وتنتهي أيضاً باختبار. إذا نجح الشخص في الإختبارين فإنه يحصل على شهادة.</p>
             <h2>من هم الذين  يجب عليهم أو المسموح لهم بحضور دورة الإندماج؟</h2>
@@ -83,7 +83,7 @@
             </ul>
             </p>
 
-            <a class="btn" id="lp-button" style="max-width:60%; margin-left: 20%" href="utf8=✓&search_form%5Bquery%5D=دورة%20الإندماج&search_form%5Bsearch_location%5D=Alexanderplatz%2C%20Berlin%2C%20Deutschland&search_form%5Bgenerated_geolocation%5D=52.5219184%2C13.4132147&search_form%5Bcategory%5D&search_form%5Bexact_location%5D=false&search_form%5Bcontact_type%5D=remote&search_form%5Bencounters%5D=hotline%2Cemail%2Cchat%2Cforum%2Conline-course%2Cportal&search_form%5Bage%5D&search_form%5Btarget_audience%5D&search_form%5Bexclusive_gender%5D&search_form%5Blanguage%5D&search_form%5Bsort_order%5D=nearby&search_form%5Bsection_identifier%5D=family&search_form%5Bpage%5D=0">Jetzt Hilfe finden ›</a>
+            <a class="btn" id="lp-button" style="max-width:60%; margin-left: 20%" href="utf8=✓&search_form%5Bquery%5D=دورة%20الإندماج&search_form%5Bsearch_location%5D=Alexanderplatz%2C%20Berlin%2C%20Deutschland&search_form%5Bgenerated_geolocation%5D=52.5219184%2C13.4132147&search_form%5Bcategory%5D&search_form%5Bexact_location%5D=false&search_form%5Bcontact_type%5D=remote&search_form%5Bencounters%5D=hotline%2Cemail%2Cchat%2Cforum%2Conline-course%2Cportal&search_form%5Bage%5D&search_form%5Btarget_audience%5D&search_form%5Bexclusive_gender%5D&search_form%5Blanguage%5D&search_form%5Bsort_order%5D=nearby&search_form%5Bsection_identifier%5D=family&search_form%5Bpage%5D=0">جِد المساعدة الآن ›</a>
 
         </div>
         <div class="content__right">
@@ -103,9 +103,9 @@
 
     <div class="footer-main layout-inner">
             <ul class="footer-main__list ">
-                <li style="margin-left: 1em"><a href="https://www.clarat.org/refugees/impressum" target="_blank">Impressum</a></li>
-                <li><a href="https://www.clarat.org/refugees/datenschutzhinweise" target="_blank">Datenschutz</a></li>
-                <li><a href="http://blog.clarat.org/" target="_blank">Blog</a></li>
+                <li style="margin-left: 1em"><a href="https://www.clarat.org/refugees/impressum" target="_blank">هيئة التحرير</a></li>
+                <li><a href="https://www.clarat.org/refugees/datenschutzhinweise" target="_blank">حماية البيانات</a></li>
+                <li><a href="http://blog.clarat.org/" target="_blank">مدونة</a></li>
                 <li><a href="http://www.clarat.org/" target="_blank">www.clarat.org</a></li>
             </ul>
         </div>
