--- a/public/themen/kinder-und-jugendhilfe.html
+++ b/public/themen/kinder-und-jugendhilfe.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html dir="rtl" class="no-js" lang="de">
+<html class="no-js" lang="de">
 <head>
     <link rel="dns-prefetch" href="//ajax.googleapis.com">
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>أسئلة حول اللجوء - Einfach Hilfe finden mit clarat.org</title>
+    <title>Kinder- und Jugendhilfe - Einfach Hilfe finden mit clarat.org</title>
     <meta name="description" content="Die Regeln für die Familienzusammenführung für Flüchtlinge sind nicht einfach zu verstehen. Es gibt viele Ausnahmen. Hier findest du Hilfe!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="width=device-width, initial-scale=1.0, user-scalable=1" name="viewport" />
@@ -55,18 +55,12 @@
         </svg>
     </div>
 </header>
-<div class="hero" style="background-image: url(assets/images/Asyl-ar.jpg)">
+<div class="hero" style="background-image: url(assets/images/kuJ_Hilfe.jpg)">
     <div class="hero__container">
         <div class="hero__content layout-inner">
-            <h1 class="hero__headline">أسئلة حول اللجوء</h1>
+            <h1 class="hero__headline">Kinder- und Jugendhilfe</h1>
 
-            <div class="hero__intro">
-            للأسف أنه توجد حالياً حروب في بعض البلدان. وهناك دول أخرى تضطهد
-            <br>
-            بعض أفرادها لأنهم مختلفين أو يفكرون بشكل مختلف. لهذه الأسباب اضطر
-            <br>
-            الكثيرون إلى الفرار من بلادهم. في ألمانيا يمكن الحصول على اللجوء.
-            </div>
+            <div class="hero__intro">Kindern und Jugendlichen soll es immer gut gehen. Deshalb ist Kinder- und Jugendhilfe für alle Kinder und Jugendlichen in Deutschland. Sie brauchen besonderen Schutz, damit sie sich gut entwickeln. Und sie haben ein Recht auf Förderung und Bildung.</div>
         </div>
     </div>
 </div>
@@ -75,23 +69,25 @@
 
         <div class="content__left">
 
-            <p class="content__mobile-intro"><b>للأسف أنه توجد حالياً حروب في بعض البلدان. وهناك دول أخرى تضطهد بعض أفرادها لأنهم مختلفين أو يفكرون بشكل مختلف. لهذه الأسباب اضطر الكثيرون إلى الفرار من بلادهم. في ألمانيا يمكن الحصول على اللجوء.</b></p>
+            <p class="content__mobile-intro"><b>Kindern und Jugendlichen soll es immer gut gehen. Deshalb ist Kinder- und Jugendhilfe für alle Kinder und Jugendlichen in Deutschland. Sie brauchen besonderen Schutz, damit sie sich gut entwickeln. Und sie haben ein Recht auf Förderung und Bildung.</b></p>
 
-            <h2>كيف يمكن التقدم بطلب للجوء؟</h2>
+            <h2>Was ist Kinder- und Jugendhilfe?</h2>
 
-            <p>في أول الأمر يجب على اللاجئ أن يسجل نفسه لدى السلطات الألمانية مثل الشرطة أو مكتب شئون الأجانب. وهناك يجب عليه طلب اللجوء. بعدها يتم تسكينه في مركز إستقبال أولي وفيه يجب أن يعطي بياناته الشخصية. وهذا ما يسمى بالتسجيل. وبعد التسجيل تبدأ قضية اللجوء. موظفو المكتب الإتحادي للهجرة واللجوء أي BAMF يقررون إذا ما كان اللاجئ يمكنه أن يحصل على حق اللجوء أم لا.</p>
-
-            <a class="btn" id="lp-button" style="max-width:60%; margin-left: 20%" href="https://www.clarat.org/ar/refugees/%D8%B9%D8%B1%D9%88%D8%B6?utf8=%E2%9C%93&search_form%5Bquery%5D=%D8%A7%D9%84%D8%B3%D9%83%D9%86%20%D9%81%D9%8A%20%D8%A3%D9%84%D9%85%D8%A7%D9%86%D9%8A%D8%A7&search_form%5Bsearch_location%5D=Alexanderplatz%2C%20Berlin%2C%20Deutschland&search_form%5Bgenerated_geolocation%5D=52.5219184%2C13.4132147&search_form%5Bcategory%5D&search_form%5Bexact_location%5D=false&search_form%5Bcontact_type%5D=remote&search_form%5Bencounters%5D=hotline%2Cemail%2Cchat%2Cforum%2Conline-course%2Cportal&search_form%5Bage%5D&search_form%5Btarget_audience%5D&search_form%5Bexclusive_gender%5D&search_form%5Blanguage%5D&search_form%5Bsort_order%5D=nearby&search_form%5Bsection_identifier%5D=family&search_form%5Bpage%5D=0">جِد المساعدة الآن ›</a>
+            <p>Unter Kinder- und Jugendhilfe versteht man Leistungen, die Familien bekommen können. Auf viele dieser Hilfen haben die Familien ein Recht. Das bedeutet, es gibt ein Gesetz dafür. Das nennt sich Kinder- und Jugendhilfegesetz. Du findest es im Sozialgesetzbuch VIII (kurz: SGB VIII). Das steht für Achtes Buch des Sozialgesetzbuches. Im Gesetz steht, welche Hilfen Kinder, Jugendliche, Eltern und Angehörige vom Staat bekommen können. Dafür ist das Jugendamt in deiner Stadt zuständig. Es kümmert sich darum, dass die Familien in Kinder- und Jugendhilfeeinrichtungen die Hilfe bekommen, die sie brauchen.</p>
+            <p>Das Jugendamt ist auch verpflichtet, Kinder und Jugendliche vor Gefahren zu schützen. Zum Beispiel vor Vernachlässigung und Gewalt. Wenn das Jugendamt eine solche Kindeswohlgefährdung feststellt, kann es gegen den Willen der Eltern Hilfe verordnen.</p>
+            <a class="btn" id="lp-button" style="max-width:60%; margin-left: 20%" href="https://www.clarat.org/family/angebote?utf8=%E2%9C%93&search_form%5Bquery%5D&search_form%5Bsearch_location%5D=Alexanderplatz%2C%20Berlin%2C%20Deutschland&search_form%5Bgenerated_geolocation%5D=52.520007%2C13.404954&search_form%5Bcategory%5D&search_form%5Bexact_location%5D=false&search_form%5Bcontact_type%5D=remote&search_form%5Bencounters%5D=hotline%2Cemail%2Cchat%2Cforum%2Conline-course%2Cportal&search_form%5Bage%5D&search_form%5Btarget_audience%5D&search_form%5Bexclusive_gender%5D&search_form%5Blanguage%5D&search_form%5Bsort_order%5D=nearby&search_form%5Bsection_identifier%5D=family&search_form%5Bpage%5D=0">Jetzt Hilfe finden ›</a>
 
         </div>
         <div class="content__right">
 
-            <h2>ما الذي يحدث في قضية اللجوء؟</h2>
+            <h2>Welche Hilfen gehören zur Kinder- und Jugendhilfe?</h2>
 
-            <p>بعد التسجيل يحصل اللاجئ على موعد لدى BAMF. في الموعد المحدد يقوم اللاجئ بتقديم طلب اللجوء. الموعد يحضره أيضاً مترجم. فيقوم الموظف بطرح أسئلة حول الحياة في الوطن وحول رحلة الفرار. بعد ذلك يحصل اللاجئ على وضع إقامة Aufenthaltsgestattung. وبهذه الهوية يمكنه أن يعيش في ألمانيا لفترة ما ويحصل على المساعدات من الدولة. هذه المساعدات تسمى إعانة طالبي اللجوء أو Asylbewerberleistungen. مكتب الـ BAMF يفحص أولاً إذا ما كانت ألمانيا تختص بأمر هذا اللاجئ أم لا. في حالة إذا كانت ألمانيا تختص به فإنه يتلقى دعوة لجلسة الإستماع.</p>
-            <p>جلسة الإستماع تعتبر أهم جزء في إجراءات اللجوء. فيقوم فيها الموظف بطرح أسئلة على اللاجئ تتعلق بحياته في بلده. ولماذا وكيف قام بالهروب من بلده. ويتم كتابة كل شئ بالجلسة. بعد الجلسة ببضعة أشهر يحصل اللاجئ على خطاب من BAMF. هذا الخطاب يسمى القرار. وهذا القرار يتضمن ما إذا كان الشخص يحصل على حق اللجوء أم لا.</p>
-            <p>من لم يحصل بعد على حق اللجوء يعيش تحت قيود. فطالبو اللجوء لابد أن يعيشوا في مكان سكن محدد. ومسموح لهم العمل فقط بعد مدة من البقاء في ألمانيا. وفي الأشهر الـ ١٥ الأولى فإن الرعاية الصحية أيضاً محدودة. </p>
-            <p>وبالرغم من ذلك فإن كل طالب لجوء يحصل على معونة طالبي اللجوء. فيحصل على طعام وملابس وأحذية وأدوات نظافة وأدوات منزلية. بالإضافة إلى مصروف جيب حتى يمكن للاجئ أن يشتري بعض الأشياء مثل كارت شحن للتليفون أو تذكرة مواصلات. </p>
+            <p>Zu den Hilfen nach dem SGB VIII gehören zum Beispiel Jugendarbeit, Begleiteter Umgang und Eingliederungshilfen für Kinder und Jugendliche. Besonders wichtig in der Kinder- und Jugendhilfe sind die <b>Hilfen zur Erziehung</b> (kurz: HzE). Hilfen zur Erziehung helfen den Eltern dabei, sich gut um ihre Kinder zu kümmern. Vor allem, wenn die Eltern sich überfordert fühlen. Die Hilfen gibt es stationär, teilstationär oder ambulant. Stationär bedeutet, dass die Kinder und Jugendlichen für eine gewisse Zeit nicht zu Hause wohnen. Sondern zum Beispiel im Betreuten Wohnen. Ambulant bedeutet, dass die Kinder und Jugendlichen weiter zu Hause leben. Die Familie bekommt dann Hilfe (meistens durch einen Sozialarbeiter oder einen Sozialpädagogen), um ihre Probleme zu lösen. Und um den Alltag gemeinsam besser zu bewältigen. Zu den ambulanten Hilfen zur Erziehung zählen zum Beispiel ein Erziehungsbeistand, eine Sozialpädagogische Familienhilfe und eine Intensive Sozialpädagogische Einzelbetreuung. </p>
+
+            <h2>Was kann man tun?</h2>
+
+            <p>Außerdem finden Kinder, Jugendliche und Familien in Berlin viele Beratungsstellen, in denen sie mit Beratern über alles, was sie bedrückt, sprechen können. Ganz egal, wie groß oder klein ihnen ihr Problem vorkommt. Es gibt auch spezialisierte Beratungsstellen. Hier bekommen sie zum Beispiel eine psychologische Beratung.</p>
+
         </div>
     </div>
     <!--<div class="cta-container">-->
@@ -103,9 +99,9 @@
 
     <div class="footer-main layout-inner">
             <ul class="footer-main__list ">
-                <li style="margin-left: 1em"><a href="https://www.clarat.org/refugees/impressum" target="_blank">هيئة التحرير</a></li>
-                <li><a href="https://www.clarat.org/refugees/datenschutzhinweise" target="_blank">حماية البيانات</a></li>
-                <li><a href="http://blog.clarat.org/" target="_blank">مدونة</a></li>
+                <li><a href="https://www.clarat.org/refugees/impressum" target="_blank">Impressum</a></li>
+                <li><a href="https://www.clarat.org/refugees/datenschutzhinweise" target="_blank">Datenschutz</a></li>
+                <li><a href="http://blog.clarat.org/" target="_blank">Blog</a></li>
                 <li><a href="http://www.clarat.org/" target="_blank">www.clarat.org</a></li>
             </ul>
         </div>
