--- a/public/themen/arbeiten-in-deutschland-ar.html
+++ b/public/themen/arbeiten-in-deutschland-ar.html
@@ -76,7 +76,7 @@
             <p>هذا يتوقف على وضع الإقامة الخاص باللاجئ. ويتوقف على المدة التي قضاها في ألمانيا. فطالب اللجوء في البداية ليس لديه الحق في العمل. وهذا الأمر يظل سارياً طالما اللاجئ لم يخرج من مركز الإستقبال الأولي وعلى الأقل لمدة لا تقل عن ثلاث شهور. عندما يحصل اللاجئ على تصريح إقامة مؤقت Aufenthaltsgestattung أو دولدونج فإنه يسمح له بالعمل. فإذا وجد اللاجئ فرصة عمل فإنه يتوجب عليه الحصول على تصريح عمل من مكتب شئون الأجانب "الأوسلندربيهورده". وهذا الأمر يستغرق بعض الوقت ويتطلب ملأ بعض الإستمارات.</p>
             <p>العديد من طالبي اللجوء والحاصلين على دولدونج القادمين من بلدان آمنة غير مسموح لهم بالعمل في ألمانيا. وهذا الأمر يسري على كل من تقدم بطلب للجوء بعد ٣١ أغسطس ٢٠١٥. وعلى الذين حصلوا على رفض لطلب اللجوء. فهؤلاء ينطبق عليهم ما يسمى بالمنع من العمل. ففي عام ٢٠١٦ تم إعتبار الدول التالية كدول آمنة. البوسنة، والهرسك، مقدونيا، صربيا، الجبل الأسود، ألبانيا، كوسوفو، غانا، والسنغال.</p>
 
-            <a class="btn" id="lp-button" style="max-width:60%; margin-left: 20%" href="https://www.clarat.org/ar/refugees/%D8%B9%D8%B1%D9%88%D8%B6?utf8=%E2%9C%93&search_form%5Bquery%5D=%D8%A7%D9%84%D8%B9%D9%85%D9%84%20%D9%81%D9%8A%20%D8%A3%D9%84%D9%85%D8%A7%D9%86%D9%8A%D8%A7&search_form%5Bsearch_location%5D=Alexanderplatz%2C%20Berlin%2C%20Deutschland&search_form%5Bgenerated_geolocation%5D=52.5219184%2C13.4132147&search_form%5Bcategory%5D&search_form%5Bexact_location%5D=false&search_form%5Bcontact_type%5D=remote&search_form%5Bencounters%5D=hotline%2Cemail%2Cchat%2Cforum%2Conline-course%2Cportal&search_form%5Bage%5D&search_form%5Btarget_audience%5D&search_form%5Bexclusive_gender%5D&search_form%5Blanguage%5D&search_form%5Bsort_order%5D=nearby&search_form%5Bsection_identifier%5D=family&search_form%5Bpage%5D=0">Jetzt Hilfe finden ›</a>
+            <a class="btn" id="lp-button" style="max-width:60%; margin-left: 20%" href="https://www.clarat.org/ar/refugees/%D8%B9%D8%B1%D9%88%D8%B6?utf8=%E2%9C%93&search_form%5Bquery%5D=%D8%A7%D9%84%D8%B9%D9%85%D9%84%20%D9%81%D9%8A%20%D8%A3%D9%84%D9%85%D8%A7%D9%86%D9%8A%D8%A7&search_form%5Bsearch_location%5D=Alexanderplatz%2C%20Berlin%2C%20Deutschland&search_form%5Bgenerated_geolocation%5D=52.5219184%2C13.4132147&search_form%5Bcategory%5D&search_form%5Bexact_location%5D=false&search_form%5Bcontact_type%5D=remote&search_form%5Bencounters%5D=hotline%2Cemail%2Cchat%2Cforum%2Conline-course%2Cportal&search_form%5Bage%5D&search_form%5Btarget_audience%5D&search_form%5Bexclusive_gender%5D&search_form%5Blanguage%5D&search_form%5Bsort_order%5D=nearby&search_form%5Bsection_identifier%5D=family&search_form%5Bpage%5D=0">جِد المساعدة الآن ›</a>
 
         </div>
         <div class="content__right">
@@ -99,9 +99,9 @@
 
     <div class="footer-main layout-inner">
             <ul class="footer-main__list ">
-                <li style="margin-left: 1em"><a href="https://www.clarat.org/refugees/impressum" target="_blank">Impressum</a></li>
-                <li><a href="https://www.clarat.org/refugees/datenschutzhinweise" target="_blank">Datenschutz</a></li>
-                <li><a href="http://blog.clarat.org/" target="_blank">Blog</a></li>
+                <li style="margin-left: 1em"><a href="https://www.clarat.org/refugees/impressum" target="_blank">هيئة التحرير</a></li>
+                <li><a href="https://www.clarat.org/refugees/datenschutzhinweise" target="_blank">حماية البيانات</a></li>
+                <li><a href="http://blog.clarat.org/" target="_blank">مدونة</a></li>
                 <li><a href="http://www.clarat.org/" target="_blank">www.clarat.org</a></li>
             </ul>
         </div>
