--- a/public/themen/wohnen-ar.html
+++ b/public/themen/wohnen-ar.html
@@ -77,7 +77,7 @@
             <p> بالحصول على تصريح إقامة مؤقت أو الحصول على الإعتراف كلاجئ أو بوضع الإقامة الدولدونج يمكن تغيير هذا الوضع. ففي العديد من الولايات الألمانية يمكن للاجئ حينها إستئجار شقة خاصة. ومع ذلك يظل وجوب الإقامة سارياً عليه حتى صدور قرار في قضية اللجوء. وهذا يعني أنه لا يمكنه مغادرة المدينة أو المنطقة التي يعيش فيها.</p>
             <p>في حالة السماح باستئجار شقة خاصة تتكفل الدولة بدفع إيجار الشقة ولكن هناك حد أقصى للإيجار المسموح به. والمبلغ يتوقف على عدد الأفراد الذين يسكنون في الشقة؛ فالأسرة مثلاً يمكنها إستئجار شقة أكبر من الفرد الذي يعيش بمفرده وبالتالي مسموح للأسرة بمبلغ إيجار أعلى.</p>
 
-            <a class="btn" id="lp-button" style="max-width:60%; margin-left: 20%" href="https://www.clarat.org/ar/refugees/%D8%B9%D8%B1%D9%88%D8%B6?utf8=%E2%9C%93&search_form%5Bquery%5D=%D8%A7%D9%84%D8%B3%D9%83%D9%86%20%D9%81%D9%8A%20%D8%A3%D9%84%D9%85%D8%A7%D9%86%D9%8A%D8%A7&search_form%5Bsearch_location%5D=Alexanderplatz%2C%20Berlin%2C%20Deutschland&search_form%5Bgenerated_geolocation%5D=52.5219184%2C13.4132147&search_form%5Bcategory%5D&search_form%5Bexact_location%5D=false&search_form%5Bcontact_type%5D=remote&search_form%5Bencounters%5D=hotline%2Cemail%2Cchat%2Cforum%2Conline-course%2Cportal&search_form%5Bage%5D&search_form%5Btarget_audience%5D&search_form%5Bexclusive_gender%5D&search_form%5Blanguage%5D&search_form%5Bsort_order%5D=nearby&search_form%5Bsection_identifier%5D=family&search_form%5Bpage%5D=0">Jetzt Hilfe finden ›</a>
+            <a class="btn" id="lp-button" style="max-width:60%; margin-left: 20%" href="https://www.clarat.org/ar/refugees/%D8%B9%D8%B1%D9%88%D8%B6?utf8=%E2%9C%93&search_form%5Bquery%5D=%D8%A7%D9%84%D8%B3%D9%83%D9%86%20%D9%81%D9%8A%20%D8%A3%D9%84%D9%85%D8%A7%D9%86%D9%8A%D8%A7&search_form%5Bsearch_location%5D=Alexanderplatz%2C%20Berlin%2C%20Deutschland&search_form%5Bgenerated_geolocation%5D=52.5219184%2C13.4132147&search_form%5Bcategory%5D&search_form%5Bexact_location%5D=false&search_form%5Bcontact_type%5D=remote&search_form%5Bencounters%5D=hotline%2Cemail%2Cchat%2Cforum%2Conline-course%2Cportal&search_form%5Bage%5D&search_form%5Btarget_audience%5D&search_form%5Bexclusive_gender%5D&search_form%5Blanguage%5D&search_form%5Bsort_order%5D=nearby&search_form%5Bsection_identifier%5D=family&search_form%5Bpage%5D=0">جِد المساعدة الآن ›</a>
 
         </div>
         <div class="content__right">
@@ -96,9 +96,9 @@
 
     <div class="footer-main layout-inner">
             <ul class="footer-main__list ">
-                <li style="margin-left: 1em"><a href="https://www.clarat.org/refugees/impressum" target="_blank">Impressum</a></li>
-                <li><a href="https://www.clarat.org/refugees/datenschutzhinweise" target="_blank">Datenschutz</a></li>
-                <li><a href="http://blog.clarat.org/" target="_blank">Blog</a></li>
+                <li style="margin-left: 1em"><a href="https://www.clarat.org/refugees/impressum" target="_blank">هيئة التحرير</a></li>
+                <li><a href="https://www.clarat.org/refugees/datenschutzhinweise" target="_blank">حماية البيانات</a></li>
+                <li><a href="http://blog.clarat.org/" target="_blank">مدونة</a></li>
                 <li><a href="http://www.clarat.org/" target="_blank">www.clarat.org</a></li>
             </ul>
         </div>
