--- a/public/themen/arbeiten-in-deutschland.html
+++ b/public/themen/arbeiten-in-deutschland.html
@@ -55,7 +55,7 @@
         </svg>
     </div>
 </header>
-<div class="hero" style="background-image: url(assets/images/arbeiten.jpg)">
+<div class="hero" style="background-image: url(assets/images/Arbeiten.jpg)">
     <div class="hero__container">
         <div class="hero__content layout-inner">
             <h1 class="hero__headline">Arbeiten in Deutschland</h1>
