--- a/public/themen/kinder-und-jugendhilfe.html
+++ b/public/themen/kinder-und-jugendhilfe.html
@@ -55,7 +55,7 @@
         </svg>
     </div>
 </header>
-<div class="hero" style="background-image: url(assets/images/KuJ_Hilfe.jpg)">
+<div class="hero" style="background-image: url(assets/images/KuJ_Hilfe2.jpg)">
     <div class="hero__container">
         <div class="hero__content layout-inner">
             <h1 class="hero__headline">Kinder- und Jugendhilfe</h1>
