Update links and texts for landing page experiment

--- a/public/themen/arbeiten-in-deutschland.html
+++ b/public/themen/arbeiten-in-deutschland.html
@@ -55,12 +55,12 @@
         </svg>
     </div>
 </header>
-<div class="hero" style="background-image: url(assets/images/Arbeiten.jpg)">
+<div class="hero" style="background-image: url(assets/images/Aerbeiten.jpg)">
     <div class="hero__container">
         <div class="hero__content layout-inner">
             <h1 class="hero__headline">Arbeiten in Deutschland</h1>
 
-            <div class="hero__intro"> Die Familie ist für viele Menschen sehr wichtig. Besonders Flüchtlinge in einer schweren Situation brauchen oft ihre Verwandten. Darum gibt es in Deutschland die Familienzusammenführung für Flüchtlinge.</div>
+            <div class="hero__intro">Wer geflohen ist, möchte sich schnell ein neues Leben aufbauen. Das heißt Asyl bekommen, eine Wohnung mieten und Arbeit finden. Für Geflüchtete gibt es dabei ein paar Dinge zu beachten.</div>
         </div>
     </div>
 </div>
