--- a/public/themen/asylfragen-ar.html
+++ b/public/themen/asylfragen-ar.html
@@ -81,7 +81,7 @@
 
             <p>في أول الأمر يجب على اللاجئ أن يسجل نفسه لدى السلطات الألمانية مثل الشرطة أو مكتب شئون الأجانب. وهناك يجب عليه طلب اللجوء. بعدها يتم تسكينه في مركز إستقبال أولي وفيه يجب أن يعطي بياناته الشخصية. وهذا ما يسمى بالتسجيل. وبعد التسجيل تبدأ قضية اللجوء. موظفو المكتب الإتحادي للهجرة واللجوء أي BAMF يقررون إذا ما كان اللاجئ يمكنه أن يحصل على حق اللجوء أم لا.</p>
 
-            <a class="btn" id="lp-button" style="max-width:60%; margin-left: 20%" href="https://www.clarat.org/ar/refugees/%D8%B9%D8%B1%D9%88%D8%B6?utf8=%E2%9C%93&search_form%5Bquery%5D=%D8%A7%D9%84%D8%B3%D9%83%D9%86%20%D9%81%D9%8A%20%D8%A3%D9%84%D9%85%D8%A7%D9%86%D9%8A%D8%A7&search_form%5Bsearch_location%5D=Alexanderplatz%2C%20Berlin%2C%20Deutschland&search_form%5Bgenerated_geolocation%5D=52.5219184%2C13.4132147&search_form%5Bcategory%5D&search_form%5Bexact_location%5D=false&search_form%5Bcontact_type%5D=remote&search_form%5Bencounters%5D=hotline%2Cemail%2Cchat%2Cforum%2Conline-course%2Cportal&search_form%5Bage%5D&search_form%5Btarget_audience%5D&search_form%5Bexclusive_gender%5D&search_form%5Blanguage%5D&search_form%5Bsort_order%5D=nearby&search_form%5Bsection_identifier%5D=family&search_form%5Bpage%5D=0">جِد المساعدة الآن ›</a>
+            <a class="btn" id="lp-button" style="max-width:60%; margin-left: 20%" href="https://www.clarat.org/ar/refugees/%D8%B9%D8%B1%D9%88%D8%B6?search_form%5Bcategory%5D=%D8%A7%D9%84%D9%84%D8%AC%D9%88%D8%A1%20%D9%88%D8%A7%D9%84%D9%82%D8%A7%D9%86%D9%88%D9%86&search_form%5Bpage%5D=0&search_form%5Bcontact_type%5D=remote">جِد المساعدة الآن ›</a>
 
         </div>
         <div class="content__right">
