Update landingpage descriptions

--- a/public/themen/arbeiten-in-deutschland-ar.html
+++ b/public/themen/arbeiten-in-deutschland-ar.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>العمل في ألمانيا - Einfach Hilfe finden mit clarat.org</title>
-    <meta name="description" content="Die Regeln für die Familienzusammenführung für Flüchtlinge sind nicht einfach zu verstehen. Es gibt viele Ausnahmen. Hier findest du Hilfe!">
+    <meta name="description" content="اللاجئ يتمنى بالتأكيد أن يبني لنفسه حياة جديدة بسرعة. هذا يعني الحصول على حق اللجوء، واستئجار شقة خاصة والعثور على عمل. وفي هذا السياق يوجد بالنسبة للاجئين بعض الأمور الواجب مراعاتها.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="width=device-width, initial-scale=1.0, user-scalable=1" name="viewport" />
     <meta content="" property="og:site_name" />
