--- a/public/themen/arbeiten-in-deutschland.html
+++ b/public/themen/arbeiten-in-deutschland.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Arbeiten in Deutschland - Einfach Hilfe finden mit clarat.org</title>
-    <meta name="description" content="Die Regeln für die Familienzusammenführung für Flüchtlinge sind nicht einfach zu verstehen. Es gibt viele Ausnahmen. Hier findest du Hilfe!">
+    <meta name="description" content="Wer geflohen ist, möchte sich schnell ein neues Leben aufbauen. Das heißt Asyl bekommen, eine Wohnung mieten und Arbeit finden. Für Geflüchtete gibt es dabei ein paar Dinge zu beachten.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="width=device-width, initial-scale=1.0, user-scalable=1" name="viewport" />
     <meta content="" property="og:site_name" />
