--- a/public/themen/sucht.html
+++ b/public/themen/sucht.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Sucht - Einfach Hilfe finden mit clarat.org</title>
-    <meta name="description" content="Die Regeln für die Familienzusammenführung für Flüchtlinge sind nicht einfach zu verstehen. Es gibt viele Ausnahmen. Hier findest du Hilfe!">
+    <meta name="description" content="Alkohol trinken, auf einer Party Drogen ausprobieren, mit Freunden kiffen, am Computer zocken – all das kann in Maßen ungefährlich sein. Doch ist der Weg in die Abhängigkeit oft kürzer als man denkt.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="width=device-width, initial-scale=1.0, user-scalable=1" name="viewport" />
     <meta content="" property="og:site_name" />
