--- a/public/themen/asylfragen-ar.html
+++ b/public/themen/asylfragen-ar.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>أسئلة حول اللجوء - Einfach Hilfe finden mit clarat.org</title>
-    <meta name="description" content="Die Regeln für die Familienzusammenführung für Flüchtlinge sind nicht einfach zu verstehen. Es gibt viele Ausnahmen. Hier findest du Hilfe!">
+    <meta name="description" content="للأسف أنه توجد حالياً حروب في بعض البلدان. وهناك دول أخرى تضطهد بعض أفرادها لأنهم مختلفين أو يفكرون بشكل مختلف. لهذه الأسباب اضطر الكثيرون إلى الفرار من بلادهم. في ألمانيا يمكن الحصول على اللجوء.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="width=device-width, initial-scale=1.0, user-scalable=1" name="viewport" />
     <meta content="" property="og:site_name" />
