--- a/public/themen/fluechtlingshilfe-ar.html
+++ b/public/themen/fluechtlingshilfe-ar.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>مساعدة اللاجئين - Einfach Hilfe finden mit clarat.org</title>
-    <meta name="description" content="Die Regeln für die Familienzusammenführung für Flüchtlinge sind nicht einfach zu verstehen. Es gibt viele Ausnahmen. Hier findest du Hilfe!">
+    <meta name="description" content=اضطر الكثير من الناس بسبب الحرب أو الاضطهاد إلى الفرار من بلادهم. وكان عليهم أن يبدأوا حياة جديدة في بلد آخر. وهذا بالفعل  أمر صعب ولكن في ألمانيا توجد مساعدة لهم.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="width=device-width, initial-scale=1.0, user-scalable=1" name="viewport" />
     <meta content="" property="og:site_name" />
