--- a/public/themen/fluechtlingshilfe.html
+++ b/public/themen/fluechtlingshilfe.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Flüchtlingshilfe - Einfach Hilfe finden mit clarat.org</title>
-    <meta name="description" content="Die Regeln für die Familienzusammenführung für Flüchtlinge sind nicht einfach zu verstehen. Es gibt viele Ausnahmen. Hier findest du Hilfe!">
+    <meta name="description" content="Viele Menschen müssen wegen Krieg und Verfolgung aus ihrem Land fliehen. Und in einem anderen Land ein neues Leben beginnen. Aber in Deutschland gibt es Hilfe für sie.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="width=device-width, initial-scale=1.0, user-scalable=1" name="viewport" />
     <meta content="" property="og:site_name" />
