--- a/public/themen/integrationskurs-ar.html
+++ b/public/themen/integrationskurs-ar.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>دورة الإندماج - Einfach Hilfe finden mit clarat.org</title>
-    <meta name="description" content="Die Regeln für die Familienzusammenführung für Flüchtlinge sind nicht einfach zu verstehen. Es gibt viele Ausnahmen. Hier findest du Hilfe!">
+    <meta name="description" content="حضور دورة الإندماج يعتبر إلزامي بالنسبة للكثير من اللاجئين. حيث إن الدورة تساعدهم على التأقلم في ألمانيا. فما الذي يتعلمه اللاجئ إذن في دورة الإندماج؟ وكيف وأين يمكن حضور دورة الإندماج؟">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="width=device-width, initial-scale=1.0, user-scalable=1" name="viewport" />
     <meta content="" property="og:site_name" />
