--- a/public/themen/integrationskurs.html
+++ b/public/themen/integrationskurs.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Integrationskurs - Einfach Hilfe finden mit clarat.org</title>
-    <meta name="description" content="Die Regeln für die Familienzusammenführung für Flüchtlinge sind nicht einfach zu verstehen. Es gibt viele Ausnahmen. Hier findest du Hilfe!">
+    <meta name="description" content="Der Besuch eines Integrationskurses ist für viele Flüchtlinge Pflicht. Er soll ihnen dabei helfen, sich in Deutschland gut einzuleben. Was genau lernt man in einem Integrationskurs? Und wie und wo kann man ihn machen?">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="width=device-width, initial-scale=1.0, user-scalable=1" name="viewport" />
     <meta content="" property="og:site_name" />
