--- a/public/themen/kinder-und-jugendhilfe.html
+++ b/public/themen/kinder-und-jugendhilfe.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Kinder- und Jugendhilfe - Einfach Hilfe finden mit clarat.org</title>
-    <meta name="description" content="Die Regeln für die Familienzusammenführung für Flüchtlinge sind nicht einfach zu verstehen. Es gibt viele Ausnahmen. Hier findest du Hilfe!">
+    <meta name="description" content="Kindern und Jugendlichen soll es immer gut gehen. Deshalb ist Kinder- und Jugendhilfe für alle Kinder und Jugendlichen in Deutschland. Sie brauchen besonderen Schutz, damit sie sich gut entwickeln.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="width=device-width, initial-scale=1.0, user-scalable=1" name="viewport" />
     <meta content="" property="og:site_name" />
