--- a/public/themen/schwangerschaft-und-geburt.html
+++ b/public/themen/schwangerschaft-und-geburt.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Schwangerschaft und Geburt - Einfach Hilfe finden mit clarat.org</title>
-    <meta name="description" content="Die Regeln für die Familienzusammenführung für Flüchtlinge sind nicht einfach zu verstehen. Es gibt viele Ausnahmen. Hier findest du Hilfe!">
+    <meta name="description" content="Viele Schwangere haben Sorgen und Ängste. Manchmal brauchen sie Hilfe, weil sie ungewollt schwanger sind. Eine Schwangerschaftsberatung oder eine Schwangerschaftskonfliktberatung bietet Hilfe.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="width=device-width, initial-scale=1.0, user-scalable=1" name="viewport" />
     <meta content="" property="og:site_name" />
