--- a/public/themen/wohnen-ar.html
+++ b/public/themen/wohnen-ar.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>السكن في ألمانيا - Einfach Hilfe finden mit clarat.org</title>
-    <meta name="description" content="Die Regeln für die Familienzusammenführung für Flüchtlinge sind nicht einfach zu verstehen. Es gibt viele Ausnahmen. Hier findest du Hilfe!">
+    <meta name="description" content="اللاجئ يتمنى بالتأكيد أن يبني لنفسه بسرعة حياة جديدة. هذا يعني الحصول على حق اللجوء، العثور على عمل، والسكن في شقة خاصة. العثور على شقة في ألمانيا شئ صعب وخاصة بالنسبة للاجئين.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="width=device-width, initial-scale=1.0, user-scalable=1" name="viewport" />
     <meta content="" property="og:site_name" />
