adjusted blog links for new plus blog url

--- a/public/themen/arbeiten-in-deutschland-ar.html
+++ b/public/themen/arbeiten-in-deutschland-ar.html
@@ -85,7 +85,7 @@
 
             <p>الحكومة الألمانية تدعم الناس الذين يبحثون عن عمل وكذلك اللاجئين. وهذا يسمى التشجيع على العمل.</p>
             <p>مركز التوظيف أي "الجوب سنتر" مسئول عن الكثير من اللاجئين. ووكالة العمل أي "أجينتور فور أربيت" مسئولة عن الآخرين. والتبعية لأي من هذين المكتبين تتوقف على وضع الإقامة الخاص باللاجئ. فإذا كان اللاجئ حاصلاً على إقامة مؤقتة أي Aufenthaltserlaubnis فإنه يتبع الجوب سنتر أما إذا كان حاصلاً على إذن إقامة مؤقت Aufenthaltsgestattung أو دولدونج فإنه يتبع وكالة العمل الأجينتور فور أربيت.</p>
-            <p>يوجد أيضاً العديد من المواقع الإلكترونية المخصصة للاجئين. هناك يمكنك البحث عن عمل. في الغالب يجب عليك أن تسجل نفسك بها وعمل بروفايل خاص بك. وبذلك يتمكن أصحاب العمل الذين يبحثون عن موظفين من الوصول إليك. كما توجد العديد من المنظمات التي تدعم اللاجئين على الاندماج. وبعض من هذه المنظمات يساعدون اللاجئين في العثور على وظيفة. 
+            <p>يوجد أيضاً العديد من المواقع الإلكترونية المخصصة للاجئين. هناك يمكنك البحث عن عمل. في الغالب يجب عليك أن تسجل نفسك بها وعمل بروفايل خاص بك. وبذلك يتمكن أصحاب العمل الذين يبحثون عن موظفين من الوصول إليك. كما توجد العديد من المنظمات التي تدعم اللاجئين على الاندماج. وبعض من هذه المنظمات يساعدون اللاجئين في العثور على وظيفة.
 </p>
 
         </div>
@@ -101,7 +101,7 @@
             <ul class="footer-main__list ">
                 <li style="margin-left: 1em"><a href="https://www.clarat.org/refugees/impressum" target="_blank">هيئة التحرير</a></li>
                 <li><a href="https://www.clarat.org/refugees/datenschutzhinweise" target="_blank">حماية البيانات</a></li>
-                <li><a href="http://blog.clarat.org/" target="_blank">مدونة</a></li>
+                <li><a href="https://plus.clarat.org/ar/wissen/" target="_blank">مدونة</a></li>
                 <li><a href="http://www.clarat.org/" target="_blank">www.clarat.org</a></li>
             </ul>
         </div>
