--- a/public/themen/asylfragen.html
+++ b/public/themen/asylfragen.html
@@ -98,7 +98,7 @@
             <ul class="footer-main__list ">
                 <li><a href="https://www.clarat.org/refugees/impressum" target="_blank">Impressum</a></li>
                 <li><a href="https://www.clarat.org/refugees/datenschutzhinweise" target="_blank">Datenschutz</a></li>
-                <li><a href="http://blog.clarat.org/" target="_blank">Blog</a></li>
+                <li><a href="https://plus.clarat.org/wissen/" target="_blank">Blog</a></li>
                 <li><a href="http://www.clarat.org/" target="_blank">www.clarat.org</a></li>
             </ul>
         </div>
