--- a/public/themen/wohnen-ar.html
+++ b/public/themen/wohnen-ar.html
@@ -98,7 +98,7 @@
             <ul class="footer-main__list ">
                 <li style="margin-left: 1em"><a href="https://www.clarat.org/refugees/impressum" target="_blank">هيئة التحرير</a></li>
                 <li><a href="https://www.clarat.org/refugees/datenschutzhinweise" target="_blank">حماية البيانات</a></li>
-                <li><a href="http://blog.clarat.org/" target="_blank">مدونة</a></li>
+                <li><a href="https://plus.clarat.org/ar/wissen/" target="_blank">مدونة</a></li>
                 <li><a href="http://www.clarat.org/" target="_blank">www.clarat.org</a></li>
             </ul>
         </div>
